# software_testing

./: CMakeLists.txt  package.xml
config/: control.yaml  control.yaml~
gps_files/: event_file.txt  gps_raw.kml  path.txt  sim_path.txt  sim_vel.txt  vel.txt  vel_map.txt
include/testing/: A_star.h  AperiodicTask.h  PeriodicTask.h  collision.h  dwa.h  global_planner.h  path.h  sim_A_star.h  sim_collision.h  sim_dwa.h  sim_state_controller.h  sim_track.h  sim_video.h  state_controller.h  talker.h  talker.h~  track.h  transform_gps.h  video.h
launch/: calibrate.launch  camera_streaming.launch  gmapping.launch  gps.launch  hokuyo.launch  laser.launch  navsat_transform.launch  odom_nav_demo.launch  odom_nav_demo.launch~  robot_localization.launch  robot_localization_local.launch  test1_encoder_odom.launch  test1_path_tracker.launch  test1_path_tracker2.launch  ugv_control.launch  ugv_rviz.launch  ugv_rviz.launch~  ugv_rviz_sim.launch  ugv_world.launch  ugv_world.launch~  ugv_world_sim.launch
meshes/: Hokuyo.stl
msg/: EsrTrack.msg  Path_msg.msg  encoder_msg.msg
nav_lib/: A_star.cpp  AperiodicTask.cpp  ThreadTask.cpp  collision.cpp  dwa.cpp  path.cpp  track.cpp  transform_gps.cpp  video.cpp
params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  params.yaml
roboteQ/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository  Root
roboteQ/include/: Constants.h
rviz/: urdf.rviz
sim_lib/: PeriodicTask.cpp  sim_A_star.cpp  sim_collision.cpp  sim_dwa.cpp  sim_path.cpp  sim_track.cpp  sim_video.cpp
src/: calibration_test.cpp  convert_gps.cpp  encoder_to_odom.cpp  global_path.py  imu.cpp  lidar_testing.cpp  move_urdf.cpp  orientation_pub.cpp  plotter_gps.py  plotter_odom.py  plotter_path.py  radar.cpp  roboteq_driver.cpp  scan_narrow.cpp  sim_scan.cpp  sim_state_controller.cpp  sim_tf_pub.cpp  state_controller.cpp  tf_pub.cpp  ultrasonics.cpp
src/old/: publish_path.cpp  ugv_control.cpp  ugv_controller.cpp
urdf/: materials.xacro  materials.xacro~  ugv.gazebo  ugv.gazebo~  ugv.urdf  ugv.urdf~  ugv.xacro  ugv.xacro~  ugv_rviz.xacro
utm_lib/: utm.cpp
videos/: video_file.txt
worlds/: circle.world  cone.world  obs_avoidance.world  test_track.world
